// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Top Stories components when given appropriate data 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin: 0 auto!important;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin: 0 auto!important;
    max-width: 80rem;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-4 {
  margin-bottom: 1rem;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-6 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-8 {
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin-top: 0;
  }
}

.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-12 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-12 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-14 {
  margin: 0;
  padding: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-18 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-20 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    padding-right: 1rem;
  }
}

.emotion-22 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-24 {
  padding: 0.5rem 0 1rem;
}

@media (max-width:62.9375rem) {
  .emotion-24 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-24:last-child {
  border: none;
}

@media (min-width:37.5rem) {
  .emotion-24 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-24 {
    padding: 0 0 1.5rem;
  }
}

.emotion-24:first-child {
  padding-top: 0;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-24:first-child {
    padding-top: 1rem;
  }
}

.emotion-24:last-child {
  padding-bottom: 0;
}

.emotion-26 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-26 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width:37.5rem) {
    .emotion-26 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) {
    .emotion-26 {
      display: block;
    }
  }
}

.emotion-28 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-28 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-28 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

.emotion-28>div {
  vertical-align: middle;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-28 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
    grid-column: 1/span 6;
  }

  @media (min-width:63rem) {
    .emotion-28 {
      padding-top: 0;
    }
  }
}

.emotion-28>div {
  display: inline-block;
  vertical-align: initial;
}

.emotion-28 svg {
  margin: 0;
}

.emotion-30 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-30 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-30 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-32 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-32:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-32:hover,
.emotion-32:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-32:visited {
  color: #6E6E73;
}

.emotion-34 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-34 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-34 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    data-e2e="top-stories-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-4 emotion-5 emotion-6 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-8 emotion-9 emotion-10 emotion-11"
      >
        <div
          class="emotion-12 emotion-13"
        />
        <h2
          class="emotion-14 emotion-15"
        >
          <span
            class="emotion-16 emotion-17"
          >
            <span
              class="emotion-18 emotion-19"
            >
              <span
                class="emotion-20 emotion-21"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="emotion-22 emotion-23"
        role="list"
      >
        <li
          class="emotion-24 emotion-25"
        >
          <div
            class="emotion-26 emotion-27"
            data-e2e="story-promo"
          >
            <div
              class="emotion-28 emotion-29"
              dir="ltr"
            >
              <h3
                class="emotion-30 emotion-31"
              >
                <a
                  class="emotion-32 emotion-33"
                  href="/mundo/noticias-internacional-51939501"
                >
                  China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                </a>
              </h3>
              <time
                class="emotion-34 emotion-35"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-24 emotion-25"
        >
          <div
            class="emotion-26 emotion-27"
            data-e2e="story-promo"
          >
            <div
              class="emotion-28 emotion-29"
              dir="ltr"
            >
              <h3
                class="emotion-30 emotion-31"
              >
                <a
                  class="emotion-32 emotion-33"
                  href="/pidgin/tori-51945757"
                >
                  Nigeria don get five new cases of Coronavirus - See how e happun
                </a>
              </h3>
              <time
                class="emotion-34 emotion-35"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Top Stories components when without <ul> 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin: 0 auto!important;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin: 0 auto!important;
    max-width: 80rem;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-4 {
  margin-bottom: 1rem;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
  }
}

@media (max-width: 37.5rem) {
  .emotion-4 {
    padding-bottom: 2rem;
    margin-bottom: 1rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-6 {
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-8 {
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    margin-top: 0;
  }
}

.emotion-10 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-10 {
    margin-bottom: 1.5rem;
  }
}

.emotion-12 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-12 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

.emotion-14 {
  margin: 0;
  padding: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-18 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-20 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    padding-right: 1rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-22 {
    padding-top: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-22 {
    padding-bottom: 1.5rem;
  }
}

.emotion-24 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-24 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width:37.5rem) {
    .emotion-24 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) {
    .emotion-24 {
      display: block;
    }
  }
}

.emotion-26 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

@media (min-width:37.5rem) {
  .emotion-26 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-26 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

.emotion-26>div {
  vertical-align: middle;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-26 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
    grid-column: 1/span 6;
  }

  @media (min-width:63rem) {
    .emotion-26 {
      padding-top: 0;
    }
  }
}

.emotion-26>div {
  display: inline-block;
  vertical-align: initial;
}

.emotion-26 svg {
  margin: 0;
}

.emotion-28 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-30 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-30:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-30:hover,
.emotion-30:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-30:visited {
  color: #6E6E73;
}

.emotion-32 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-32 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-32 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<section
    aria-labelledby="top-stories-heading"
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    data-e2e="top-stories-heading"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-4 emotion-5 emotion-6 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-8 emotion-9 emotion-10 emotion-11"
      >
        <div
          class="emotion-12 emotion-13"
        />
        <h2
          class="emotion-14 emotion-15"
        >
          <span
            class="emotion-16 emotion-17"
          >
            <span
              class="emotion-18 emotion-19"
            >
              <span
                class="emotion-20 emotion-21"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="emotion-22 emotion-23"
      >
        <div
          class="emotion-24 emotion-25"
          data-e2e="story-promo"
        >
          <div
            class="emotion-26 emotion-27"
            dir="ltr"
          >
            <h3
              class="emotion-28 emotion-29"
            >
              <a
                class="emotion-30 emotion-31"
                href="/mundo/noticias-internacional-51939501"
              >
                China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
              </a>
            </h3>
            <time
              class="emotion-32 emotion-33"
              datetime="2020-02-03"
            >
              3rd February 2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
